# beacon-pulse

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.txt  check_symbols.ps1  index.html
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/ui-android/: build.gradle.kts  gradle.properties  settings.gradle.kts
apps/ui-android/app/: build.gradle.kts
apps/ui-android/app/src/main/: AndroidManifest.xml
apps/ui-android/app/src/main/java/com/beaconpulse/player/: MainActivity.kt
apps/ui-android/app/src/main/java/com/beaconpulse/player/network/: H264Decoder.kt  NetworkClient.kt  Reassembler.kt  RtpPacket.kt
apps/ui-android/app/src/main/java/com/beaconpulse/player/ui/: DashboardScreen.kt  StreamingScreen.kt
apps/ui-android/app/src/main/java/com/beaconpulse/player/webrtc/: WebRtcClient.kt
apps/ui-android/app/src/main/res/values/: strings.xml  themes.xml
apps/ui/dist-host/: index.html
apps/ui/dist-host/assets/: index-DPLJKS76.css  index-DafuuhUB.js
apps/ui/dist-player/: index.html
apps/ui/dist-player/assets/: index-DffGNgIG.js
apps/ui/src/: App.css  App.tsx
apps/ui/src-tauri/: Cargo.toml  tauri.conf.json  tauri.host.conf.json  tauri.player.conf.json
apps/ui/src-tauri/src/: ipc_client.rs  main.rs
apps/ui/src-tauri/windows/: installer-hooks.nsh
apps/ui/src/components/: DebugOverlay.css  DebugOverlay.tsx  FileManager.tsx
apps/ui/src/pages/: Client.tsx  Home.tsx  Host.tsx  Settings.tsx
apps/ui/src/store/: ipc.ts  sessionStore.ts  settingsStore.ts  toastStore.ts
assets/: index-BshGTUwi.js  index-BtZJG_1m.css  index-C0v3gqDH.js  index-CCrYcEf_.css  index-D3uNcRRE.css  index-DEmvZkHC.js  index-DMOHwyC8.js  index-Tdx6LZcL.css
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  SECURITY.md
docs/plans/: 2026-06-25-audio-autotuning-shell-monitor.md
installer/: BeaconSetup.cs
installer/host/: installer.nsi
installer/player/: PulseSetup.cs  installer.nsi
portfolio/: index.html  package-lock.json  package.json  tailwind.config.js  verify_portfolio.py  vite.config.ts
portfolio/src/: main.ts  style.css
scripts/: check_symbols.ps1  signaling_server.py
services/core/: Cargo.toml  build.rs
services/core/src/: benchmark.rs  cli_host.rs  cli_player.rs  client_session.rs  host_session.rs  lib.rs  pipeline.rs  registry.rs  telemetry.rs  tray.rs
services/core/src/auth/: mod.rs  pairing.rs
services/core/src/capture/: audio.rs  audio_player.rs  capture_manager.rs  compatibility.rs  dda.rs  display_list.rs  mod.rs  wgc.rs  window_list.rs
services/core/src/encoder/: gpu_device.rs  hardware.rs  mod.rs  software.rs  yuv.rs
services/core/src/input/: mod.rs
services/core/src/ipc/: mod.rs
services/core/src/logging/: crash_handler.rs  init.rs  metrics.rs  mod.rs  session_logger.rs
services/core/src/network/: broadcast.rs  crypto.rs  discovery.rs  listener.rs  mod.rs  receiver.rs  rtp.rs  session.rs  signaling.rs  signaling_server.rs  streamer.rs  udp_stream.rs  webrtc.rs
services/watchdog/: Cargo.toml
services/watchdog/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol.rs  security.rs
