[package]
name = "lanshare-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lanshare-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
dirs-next    = "2"
lanshare-service = { path = "../../../services/core" }


[workspace]

